Use final, remove trailing whitespace
Refactor duplicate code